--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ website:
   title: "Deyu Ming"
   description: The personal website of Deyu Ming
   site-url: https://mingdeyu.github.io/
-  repo-url: https://github.com/mingdeyu/mingdeyu.github.io
+  repo-url: https://github.com/mingdeyu/mingdeyu.github.io/
   twitter-card: true
   open-graph: true
   navbar:
@@ -25,7 +25,7 @@ website:
         text: Software
     right:
       - icon: github
-        href: https://github.com/mingdeyu/mingdeyu.github.io
+        href: https://github.com/mingdeyu/mingdeyu.github.io/
   page-footer:
     center: |
       © 2023 [Deyu Ming](/about)                   
